# sml

./: README.md
src/: README.md
src/frontend/: Dockerfile  README.md  b.sh  env  index.html  package-lock.json  package.json
src/haproxy/: Dockerfile  README.md  haproxy.cfg
src/kafka/: README.md
src/nodeserver/: Dockerfile  READEME.md  env  package-lock.json  package.json  server.js
src/ord_srv_mgr/: README.md  ReadMe.txt  package.xml  setup.cfg  setup.py
src/ord_srvcli/: README.md  ReadMe.txt  package.xml  setup.cfg  setup.py
src/ord_srvcli_interfaces/: CMakeLists.txt  README.md  package.xml
src/orderclient/: Dockerfile  README.md
src/orderdispatcher/: Dockerfile  README.md  crontab  dispconf.conf  orderdispatcher.py  requirements.txt
src/orderservice/: Dockerfile  README.md  base.py  guestorder.py  onlineorder.py  orderdetails.py  ordersvc.py  ordsvc.conf  paymentconfirmation.py  requirements.txt  tutorial.conf  webserver.conf  webserver.py
src/orderstatusupdater/: Dockerfile  README.md  crontab  dispconf.conf  orderstatusupdater.py  requirements.txt
src/otel/: README.md
src/postgres/: Dockerfile  README.md  init.sql  pg_hba.conf  postgres.sql
src/productprovider/: Dockerfile  README.md  app.py  delegator.py  docs.json  productsvc.py  requirements.txt  webserver.conf  webserver.py
src/productservice/: DocToProductTranformer.js  Dockerfile  env  (+10 more)
src/py_srvcli/: CMakeLists.txt  README.md  ReadMe.txt  package.xml  postgres.sql  setup.py
src/py_srvcli/py_srvcli/: couch.conf  orderprocessing_action_client.py  orderprocessing_action_server.py
(+67 files in other folders)
